src/wrf/slurm_outputs/shared_z_lim_v1.txt
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/shared_z_lim_datasrc.py", line 81
    elif i == 
             ^
SyntaxError: invalid syntax
[ 606.07        929.80166667 1253.53333333 1383.026      1512.51866667
 1642.01133333 1771.504      1900.99666667 2030.48933333 2159.982
 2289.47466667 2418.96733333 2807.44533333 3001.68433333 3195.92333333
 3454.90866667 3649.14766667 3843.38666667 4102.372      4296.611
 4490.85      ]
[ 606.07        929.80166667 1253.53333333 1383.026      1512.51866667
 1642.01133333 1771.504      1900.99666667 2030.48933333 2159.982
 2289.47466667 2418.96733333 2807.44533333 3001.68433333 3195.92333333
 3454.90866667 3649.14766667 3843.38666667 4102.372      4296.611
 4490.85      ]
5669.6074
5964.621
5605.3335
5964.997
